--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "~40.0.0",
+    "expo-image-picker": "^9.2.1",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.1",
     "lottie-react-native": "^3.5.0",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-swipe-list-view": "^3.2.5",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
